<resources>
    <!-- Facebook sign in -->
    <string name="facebook_app_id" translatable="false">3250021858609713</string>
    <string name="facebook_client_token" translatable="false">1ababe214e641d42a8aadaefeb569ea3</string>
    <string name="info_facebook_button">Sign in with Facebook</string>

    <string name="app_name" translatable="false">House Organizer</string>
    <string name="discoverButton"><u>Discover</u></string>
    <string name="appDescription">\"Best app for house organization\" -The Developers</string>
    <string name="cloudServerID" translatable="false">203269545085-bd0ji5p3615rboo0cjkmcg9fslr9d6q8.apps.googleusercontent.com</string>
    <string name="settings_speakable_text">Settings</string>
    <string name="house_speakable_text">Home selection</string>
    <string name="info_speakable_text">Info</string>
    <string name="img_house_row_desc">Image for the given house name</string>
    <string name="home_logo">Home Logo</string>
    <string name="color_theme">Color theme</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_household_info">No info yet!</string>
    <string name="edit_household_notes">Edit the description</string>
    <string name="edit_notes_button">Edit</string>
    <string name="info_header">Residents</string>

    <!-- Create household -->
    <string name="add_household">Create household</string>
    <string name="add_join_household">Join/Create household</string>
    <string name="add_household_success">Added household!</string>
    <string name="add_household_failure">Failed to add household!</string>
    <string name="scanQRButton">Scan QR code to join</string>
    <string name="household_creation_hint">Household name</string>
    <string name="latitude_hint">Latitude</string>
    <string name="longitude_hint">Longitude</string>
    <string name="leave_house">Leave</string>

    <!-- Household selection -->
    <string name="house_name">House name</string>>
    <string name="permission_denied">This app requires permission to be granted in order to work properly</string>

    <!-- Edit Household -->
    <string name="changed_picture">Image uploaded!</string>
    <string name="change_picture_speakable_text">Change image</string>
    <string name="user_name">User name</string>
    <string name="edit_button_description">Press to edit the household</string>
    <string name="delete_button">Delete household</string>
    <string name="edit_title">Household</string>
    <string name="add_user">Add user</string>
    <string name="change_owner">Change owner</string>
    <string name="add_user_hint">Valid email address</string>
    <string name="invalid_email">Email provided is not valid</string>
    <string name="duplicate_user">User already present!</string>
    <string name="not_owner">You are not the owner!</string>
    <string name="owner_change_success">Successfully changed owner</string>
    <string name="add_user_success">Successfully added user</string>
    <string name="remove_user_success">Successfully removed user</string>
    <string name="QR_invalid">Not a valid household</string>
    <string name="remove_user">Remove user</string>
    <string name="cant_remove_yourself">You cannot remove yourself</string>
    <string name="cant_remove_owner">You cannot leave as the owner</string>
    <string name="remove_calendar_failure">Cannot remove calendar</string>
    <string name="remove_household_success">Successfully removed household</string>
    <string name="remove_household_failure">Cannot remove household</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="cache_header">Cache</string>

    <!-- General Preferences -->
    <string name="signature_title">Your name</string>
    <string name="dark_mode_title">Dark mode</string>
    <string name="lang_title">Language</string>

    <!-- Cache Preferences -->
    <string name="clear_local_storage">Clear local storage</string>
    <string name="clear_local_storage_success">Cleared local storage!</string>

    <!-- Task view and its buttons -->
    <string name="task_title_hint">Name</string>
    <string name="task_description_hint">Description</string>
    <string name="add_subtask">Add subtask</string>
    <string name="task_completion_title">Congratulations!</string>
    <string name="task_completion_desc">You just completed a task. Keep it up!</string>
    <string name="subtask_completion_desc">You just completed a task. Keep it up!</string>
    <string name="tap_to_modify">Tap to modify</string>
    <string name="add_remove_assignee">Add/remove assignee</string>
    <string name="assignees_button">Assignees</string>

    <!-- Calendar view and its buttons -->
    <string name="cycle_calendar_views" translatable="false">↻</string>
    <string name="no_events">No events on this day.</string>
    <string name="refresh_calendar_fail">Could not refresh.</string>
    <string name="calendar_upcoming_date">On the %1$s.</string>
    <string name="left_arrow" translatable="false"><![CDATA[<]]></string>
    <string name="right_arrow" translatable="false"><![CDATA[>]]></string>
    <string name="pick_a_date_and_time">Pick a date and time</string>
    <string name="no_attachment">Could not find the attachment</string>

    <!-- Event creation and information popups -->
    <string name="event_creation_title">Add an event</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add_text">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="event_editing_title">Edit event</string>
    <string name="confirm">Confirm</string>

    <!-- Login -->
    <string name="tag_login_activity" translatable="false">LoginActivity</string>
    <string name="tag_register_email" translatable="false">RegisterEmail</string>
    <string name="tag_login_email" translatable="false">LoginEmail</string>
    <string name="email_already_used">Email is already used.</string>
    <string name="verify_email">Please verify your email and then reload the app.\n\n</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_constraints">- Must be at least 8 characters.\n- Must contain at least 1 lowercase and 1 uppercase letter.\n- Must contain at least 1 number.\n- Must contain at least 1 special character.\n- Cannot contain any whitespaces.\n- Both passwords must be the same.</string>
    <string name="reg_email_auth_failed">Authentication failed.</string>
    <string name="log_email_auth_failed">Email or password is wrong.</string>
    <string name="email_not_valid">Email is not valid.</string>
    <string name="password_not_valid">Password is not valid.</string>
    <string name="inputs_empty">Inputs must not be empty.</string>
    <string name="signout_intent">sign_out</string>

    <!-- Attachment menu -->
    <string name="attach">Attach</string>
    <string name="show">Show</string>
    <string name="remove">Remove</string>
    <string name="three_dots">three dots</string>
    <string name="event_attachment_content_description">attachment of the event</string>

    <!-- ShopItem -->
    <string name="name">Name</string>
    <string name="unit">Unit</string>
    <string name="add_item_title">Adding an item to the list</string>
    <string name="edit_item_title">Edit an item</string>
    <string name="edit_item_button">Edit</string>
    <string name="item_delete_button_description">Delete the corresponding shop list item</string>
    <string name="add_item_button">Add item</string>
    <string name="remove_picked_up">Remove checked items</string>
    <string name="number_empty" translatable="false">0</string>

    <!-- Bottom features menu -->
    <string name="main_screen" translatable="false">Main Screen</string>
    <string name="groceries">Groceries</string>
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="add_an_event">Add an event</string>
    <string name="cycle_view">Cycle view</string>
    <string name="offline_warning">You have gone offline.</string>
    <string name="tl_screen_new_task">New task</string>
    <string name="show_qr_code">Show QR code</string>

    <!-- Localization -->
    <string name="title_location_permission">Location permissions</string>
    <string name="text_location_permission">We need access to your location in order to
        automatically select the house closest to you</string>
    <string name="go_back_online_button">Go back online</string>
    <string name="go_offline_button">Go offline</string>
    <string name="show_invite_qr_code">Show invite QR code</string>
    <string name="house_location_title">House location</string>
    <string name="address_field">Enter address</string>
    <string name="no">No</string>
    <string name="warning_address">Please enter a more precise address</string>
    <string name="address_error">Impossible to find coordinates</string>
    <string name="address_fill_fields">Please fill in both fields</string>
    <string name="address_network_error">Could not connect to the network</string>

    <!-- Billsharer -->
    <string name="bs_add_expense">Add expense</string>
    <string name="billsharer">Billsharer</string>
    <string name="expenses">Expenses</string>
    <string name="balances">Balances</string>
    <string name="amount">Amount</string>
    <string name="payer">Payer</string>
    <string name="debt">Debt</string>
    <string name="specify_shares">Specify shares</string>
    <string name="new_expense">New Expense</string>
    <string name="adds_up_to_total">The total of the shares doesn\'t add up to the cost of the expense.</string>

    <!-- Notifications -->
    <string name="reminder">Reminder</string>
    <string name="reminder_message">Don\'t forget your task :</string>
    <string name="notify">Notify</string>
    <string name="show_image">Show image of household</string>

    <!-- Offline mode -->
    <string name="go_offline">Go offline</string>

    <!-- Others -->
    <string name="add" translatable="false">+</string>
</resources>
