<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_bar_menu"
        android:title="@string/main_screen"
        android:icon="@drawable/ic_action_menu"/>

    <item
        android:id="@+id/nav_bar_cart"
        android:title="@string/groceries"
...
    <item
        android:id="@+id/nav_bar_task"
        android:title="@string/tasks"
        android:icon="@drawable/ic_action_task"/>

    <item
        android:id="@+id/nav_bar_calendar"
        android:title="@string/calendar"
        android:icon="@drawable/ic_action_calendar"/>
    <item
        android:id="@+id/nav_bar_bs"
        android:icon="@drawable/ic_action_bs"
        android:title="@string/billsharer" />
...
