<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shopDeleteItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="0dp"
    android:paddingBottom="0dp">

    <CheckBox
        android:id="@+id/item_checkbox"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/delete_item_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/item_delete_button_description"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

</LinearLayout>