...
        android:onClick="settingsButtonPressed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_icon" />

    <ImageButton
        android:id="@+id/house_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:contentDescription="@string/house_speakable_text"
        android:onClick="houseButtonPressed"
...
